# DarknessEngine

./: .gitignore  .gitmodules  README.md
Engine/: CMakeLists.txt
Engine/DarknessEngine/: CMakeLists.txt
Engine/DarknessEngine/include/: DarknessEngine.h  Kernel.h
Engine/DarknessEngine/include/Core/: Application.h  EntryPoint.h  Input.h  KeyCode.h  Layer.h  LayerStack.h  Log.h  MouseButtonCode.h  Test.h  Window.h
Engine/DarknessEngine/include/DarknessEngine/: DarknessEngine.h
Engine/DarknessEngine/include/DarknessEngine/Core/: Core.h  Input.h  Log.h
Engine/DarknessEngine/include/DarknessEngine/Events/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/DarknessEngine/include/DarknessEngine/Renderer/: Buffer.h  BufferLayout.h  RenderCommand.h  Renderer.h  RendererAPI.h  Shader.h  VertexArray.h
Engine/DarknessEngine/include/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/DarknessEngine/include/ImGui/: ImGuiLayer.hpp
Engine/DarknessEngine/include/Platform/OpenGL/: OpenGLContext.h  OpenGLShader.h
Engine/DarknessEngine/include/Platform/Windows/: WindowsInput.hpp  WindowsWindow.hpp
Engine/DarknessEngine/include/Renderer/: GraphicsContext.h  Shader.h
Engine/DarknessEngine/include/platform_OpenGL/Platform/OpenGL/: OpenGLBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLVertexArray.h
Engine/DarknessEngine/include/platform_Windows/Platform/Windows/: WindowsWindow.hpp
Engine/DarknessEngine/src/: pch.h
Engine/DarknessEngine/src/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Test.cpp
Engine/DarknessEngine/src/ImGui/: ImGuiKeyTranslator.h  ImGuiLayer.cpp
Engine/DarknessEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLVertexArray.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
Engine/DarknessEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Engine/DarknessEngine/src/Renderer/: Buffer.cpp  BufferLayout.cpp  RenderCommand.cpp  Renderer.cpp  VertexArray.cpp
Engine/Sandbox/: CMakeLists.txt
Engine/Sandbox/src/: main.cpp
doc/: definitions.md
